frontend/test/typecheck/error/param-type-mismatch.fc
void foo(int i, bool b) {}

void bar() {
    foo(1, 1.0);
}
